--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,9 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="black2">#15141F</color>
+    <color name="gray">#A2A0A8</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="Blue">#0084F1</color>
     <color name="LightBlue">#DEEAF4</color>
 </resources>
