--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity"
-   >
+    tools:context=".RegisterActivity">
 
     <TextView
         android:id="@+id/logHi"
@@ -27,7 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="48dp"
         android:layout_marginTop="4dp"
-        android:text="Sign in to your account."
+        android:text="Sign up to your account."
         android:textColor="@color/gray"
         android:textSize="20dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -95,11 +94,11 @@
 
 
     <ImageButton
-        android:id="@+id/btn_login"
+        android:id="@+id/btn_register"
         android:layout_width="330dp"
         android:layout_height="56dp"
         android:layout_marginStart="48dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="36dp"
         android:background="@drawable/bluebutton"
         android:backgroundTint="@color/Blue"
         app:layout_constraintEnd_toEndOf="parent"
@@ -110,7 +109,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Sign in"
+        android:text="Sign Up"
         android:textColor="@color/white"
         android:textSize="15dp"
         app:layout_constraintBottom_toBottomOf="@+id/btn_register"
@@ -118,38 +117,6 @@
         app:layout_constraintStart_toStartOf="@+id/btn_register"
         app:layout_constraintTop_toTopOf="@+id/btn_register"></TextView>
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="116dp"
-        android:layout_marginTop="16dp"
-        android:text="Don’t have account?"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_login"></TextView>
 
-    <Button
 
-        android:id="@+id/btn_register"
-        android:layout_width="58dp"
-        android:layout_height="19dp"
-        android:layout_marginTop="16dp"
-        android:background="@android:color/transparent"
-        android:textColor="@color/black"
-        android:textSize="6dp"
-        app:layout_constraintStart_toEndOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/btn_login"></Button>
-
-    <TextView
-        android:id="@+id/sign_up"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:paddingLeft="1dp"
-        android:text="Sign up"
-        android:textColor="@color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.057"
-        app:layout_constraintStart_toEndOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/btn_login"></TextView>
 </androidx.constraintlayout.widget.ConstraintLayout>
